--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       html {
         font-family: sans-serif;
-        background: #ffc600;
+        background: #2E86C1 ;
       }
 
       .inbox {
